--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Table Top Tally</string>
     <string name="action_settings">Settings</string>
     <string name="default_toast">This is the default toast message</string>
+    <string name="game_click_tpl">You choose the Game, %1$s!</string>
 </resources>
