--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="default_toast">This is the default toast message</string>
     <string name="game_click_tpl">You choose the Game, %1$s!</string>
+    <string name="toast_new_game">Game Added</string>
 </resources>
