--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,13 @@
 <resources>
     <string name="app_name">Table Top Tally</string>
     <string name="action_settings">Settings</string>
+    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget interdum ante, at adipiscing ipsum. Phasellus pellentesque commodo libero, id volutpat ipsum pretium at. Duis sit amet egestas nisi. Donec id dui eu lectus volutpat posuere. Nunc et viverra ante, vel malesuada tortor. Pellentesque ut interdum tellus, sit amet hendrerit dui. Sed accumsan, nisl eu tincidunt tempus, neque lorem sodales odio, non tristique orci lorem quis augue. In sodales rutrum faucibus. Morbi egestas massa sit amet ante pellentesque, eu laoreet ante congue. Sed aliquet, dolor ac placerat pellentesque, risus leo fermentum quam, eget eleifend tellus nulla euismod tellus. Donec adipiscing cursus leo et faucibus. Aliquam erat volutpat.</string>
+
+    <!-- Keys -->
+    <string name="extra_starting_game_position">extra_starting_item_position</string>
+    <string name="extra_current_game_position">extra_current_item_position</string>
+
+    <string name="tag_name_tpl">TRANSITION:%d</string>
 
     <!-- Activities-->
     <string name="title_activity_game">GameActivity</string>
@@ -20,6 +27,6 @@
     <string name="title_dialog_winner">Which player won?</string>
 
     <!-- Transitions -->
-    <string name="transition_toolbar">transition:TOOLBAR</string>
+    <string name="transition_game_card">transition:GAME_CARD</string>
     <string name="transition_player_name">transition:PLAYER_NAME</string>
 </resources>
